<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <EditText
        android:id="@+id/usernInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/inputHeight"
        android:layout_marginTop="52dp"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/emailInput"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/inputHeight"
        android:height="48dp"
        android:ems="10"
        android:hint="@string/passwInput"
        android:inputType="textPassword"
        android:textSize="@dimen/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernInput" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/lightBlue"
        android:text="@string/logInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwInput" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/lightBlue"
        android:text="@string/cancelBtn"
        app:layout_constraintStart_toStartOf="@+id/logInBtn"
        app:layout_constraintTop_toBottomOf="@+id/logInBtn" />

    <TextView
        android:id="@+id/notSignedUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/notSignedUp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelBtn"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/lightBlue"
        android:text="@string/signUpBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>